--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -939,7 +939,8 @@ function actualizarCantidad(id, nuevaCant) {
     }
   }
 
-  renderDebounced();
+  // 🧮 Recalcular totales y refrescar tabla
+  render();
 }
 
   
