--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -891,10 +891,11 @@ function render() {
     tr.innerHTML = `
       <td>${it.nombre}</td>
       <td style="text-align:center">
-        <input type="number" min="0" step="1" value="${it.cantidad}"
-          style="width:60px;text-align:center;padding:4px;border-radius:6px;
-          border:1px solid #ccc;font-size:14px;"
-          onchange="actualizarCantidad('${it.id}', this.value)">
+        <input type="number" min="0" step="0.01" value="${it.cantidad}"
+  style="width:70px;text-align:center;padding:4px;border-radius:6px;
+  border:1px solid #ccc;font-size:14px;"
+  onchange="actualizarCantidad('${it.id}', this.value)"
+  oninput="actualizarCantidad('${it.id}', this.value)">
       </td>
       <td style="text-align:right">${money(it.importe)}</td>
       <td class='del-col'>
