--- a/POSVTA4/ticketsresumen.html
+++ b/POSVTA4/ticketsresumen.html
@@ -67,7 +67,7 @@
     <div class="total">Total del Día: <span id="lblTotal">$0.00</span></div>
   </div>
 
-  <a class="volver" href="POS_RUTA_PROVSOFT_V3_DESC.html">⬅️ Volver al POS</a>
+  <a class="volver" href="POSV4PASS.html">⬅️ Volver al POS</a>
 
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 
